# esp32-rust-template

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
config/: sdkconfig.defaults
docs/: API.md
scripts/: flash.sh  setup.sh
src/: main.rs
src/peripherals/: button.rs  led.rs  mod.rs
src/tasks/: mod.rs  sensor_task.rs  wifi_task.rs
src/utils/: error_handler.rs  math_utils.rs  mod.rs  time_utils.rs
tests/: integration_test.rs
